--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ script:
   git config --global hub.protocol "https"
   git config --global credential.helper "store --file=${CONF_DIR}/git-credential"
 
-  git clone "https://github.com/gitops-demo/manifests.git" manifests
+  git clone "https://github.com/ch1aki/manifests.git" manifests
   cd manifests
   git checkout dev
   git checkout -b "ci-build/app-b/${TRAVIS_COMMIT}"
@@ -46,8 +46,8 @@ script:
     sed -i -e "s!image: gitopsdemo/app-b:.\+\$!image: gitopsdemo/app-b:${TRAVIS_COMMIT}!" "${f}"
   done
 
-  COMMIT_MSG="gitops-demo/app-b/${PREV_COMMIT}...${TRAVIS_COMMIT}"
-  PR_MSG="[DEPLOY REQUEST] gitops-demo/app-b\n\n[${PREV_COMMIT}...${TRAVIS_COMMIT}](https://github.com/gitops-demo/app-b/compare/${PREV_COMMIT}...${TRAVIS_COMMIT})"
+  COMMIT_MSG="ch1aki/app-b/${PREV_COMMIT}...${TRAVIS_COMMIT}"
+  PR_MSG="[DEPLOY REQUEST] ch1aki/app-b\n\n[${PREV_COMMIT}...${TRAVIS_COMMIT}](https://github.com/ch1aki/app-b/compare/${PREV_COMMIT}...${TRAVIS_COMMIT})"
   git add .
   git commit -m "${COMMIT_MSG}"
   echo -e "${PR_MSG}" | hub pull-request --push -b dev -F -
